@@ -13,6 +13,11 @@ HOSTS:
     box:        centos/7
     hypervisor: <%= hypervisor %>
 
+  el8:
+    platform:   el-8-x86_64
+    box:        centos/8
+    hypervisor: <%= hypervisor %>
+
 CONFIG:
   log_level: verbose
   type: aio
