@@ -9,11 +9,13 @@ HOSTS:
   oel7:
     roles:
       - default
-      - master
-      - client
-      - mate_enabled
     platform:   el-7-x86_64
     box:        onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
+
+  oel8:
+    platform:   el-8-x86_64
+    box:        generic/oracle8
     hypervisor: <%= hypervisor %>
 
 CONFIG:
