@@ -1,3 +1,7 @@
+* Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
+- Add EL8 support
+- Add REFERENCE.md
+
 * Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.1.0
 - Remove Puppet 4.x support
 - Add Puppet 6.x support
